--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,34 @@
-name: CI worklflow
+name: CI Workflow
 
 on:
   push:
     branches:
-      - main # execute le workflow a chaque push sur main
+      - main  # Exécute le workflow à chaque push sur main
 
   pull_request:
     branches:
-      - main #executesur le pull requests vers main
+      - main  # Exécute sur les pull requests vers main
 
- jobs:
-   test:
-     runs-on:windows
+jobs:
+  test:
+    runs-on: windows-latest  # Corrigé: espace ajouté
 
-     steps:
-        - name:  checkout code
-          uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4  # Version mise à jour
 
-        - name:set up Python
-         uses: actions/setup-python@v2
-         with:
-           python-version:'3.12'
-         - name: install dependencies
-          run:
-             python -m pip install --upgrade pip
-             pip  install pytest 
-          - name: Run tests
-           run: pytest
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+
+      - name: Run tests
+        run: pytest
+
 
 
